# typetris

./: README.md  package.json  tslint.json
api/: package.json  tsconfig.json
api/src/: app.ts  server.ts
api/src/scores/: score.interface.ts  scores.controller.ts  scores.model.ts
api/src/utils/: validateEnv.ts
client/: package.json  tslint.json  vue.config.js  webpack.output.js
client.bak/: tslint.json
client.bak/public/: index.html
client.bak/src/: App.vue  shims-tsx.d.ts
client.bak/src/components/: Leaderboards.vue  PopUp.vue  ScoreSubmission.vue  Shape.scss
client.bak/src/lib/: PlayerInfo.ts
client.bak/src/views/: About.vue  Game.vue  Home.scss  Home.vue
client/src/: App.vue  config.ts  main.ts  router.ts  shapes.ts  shims-vue.d.ts  types.ts  words.ts
client/src/components/: EndScore.vue  Leaderboards.vue  (+7 more)
phaser_client/: game.ts
pixi_client/: package.json
pixi_client/src/: index.html  index.ts
public/: index.html
server/: Gemfile  Procfile
server/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
server/db/: schema.rb
src/: App.vue  router.ts  shapes.ts  types.ts  words.ts
src/components/: HelloWorld.vue  PopUp.vue  ScoreBoard.vue  Shape.scss  Shape.vue  Terminal.vue  UserInput.vue
src/lib/: ShapeBody.ts  utils.ts
src/views/: About.vue  Game.ts  Game.vue  GameView.vue  Home.vue  Shape.ts
typetris_api/: Cargo.toml
typetris_api/migrations/2020-02-17-034700_create_scores/: up.sql
typetris_api/src/: actions.rs  main.rs  models.rs  schema.rs
typetris_api/src/handlers/: mod.rs  score_handler.rs
(+41 files in other folders)
