[package]
name = "typetris_api"
version = "0.1.0"
authors = ["Levi Murray <levidavidmurray@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
futures = "0.3.4"

# juniper = "0.14.2"

diesel = { version = "1.4.3", features = ["postgres", "network-address", "chrono", "r2d2"] }
chrono = { version = "0.4.10", features = ["serde"] }
ipnetwork = "0.16.0"
dotenv = "0.15.0"

log = "0.4.8"
env_logger = "0.6.2"

r2d2 = "0.8.8"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
